Spacing and margins fixes for event title

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -24,6 +24,7 @@
     bottom: 0;
     width: 100%;
     max-height: 100%;
+    min-height: 100%;
     height: $hero-gradient-height;
     background-image: linear-gradient(to bottom, transparent 0%, white 100%);
 }
@@ -34,7 +35,7 @@
 
 .hero-title {
     position: relative;
-    top: -75px;
+    bottom: 5vh;
 }
 
 .poll-response-bar {
